Refactor partition-plan REST API with PATCH merges and idempotent mutations.
Replace RPC-style promote/scale/onboard paths with REST-shaped endpoints, merge partial plan updates via PATCH, and skip registry writes when onboard/promote/PATCH requests already match current state.

Co-authored-by: Cursor <cursoragent@cursor.com>